0.3.0: (Future)
Features:
 - Ability to hide individual background layers, or OBJs
 - Ability to mute individual audio channels
 - Palette viewer
 - Volume control
 - More shortcuts are editable (e.g. quick save/load, solar sensor)
 - Rewind now shows the frame after rewinding
Bugfixes:
 - GBA: Fix timers not updating timing when writing to only the reload register
 - All: Fix sanitize-deb script not cleaning up after itself
 - Qt: Fix Display object leak when closing a window
 - Qt: Fix .deb dependencies
 - GBA Audio: FIFOs should not poll DMAs that are not scheduled for audio
 - Qt: Fix "QOpenGLContext::swapBuffers() called with non-exposed window" warning
 - ARM7: Fix SWI and IRQ timings
 - GBA Audio: Force audio FIFOs to 32-bit
 - GBA Memory: Ensure changing the timing of a DMA reschedules it
 - Qt: Fix window not regaining focus after exiting savestate window
 - Qt: Fix regression where video would not record if the game had already started
 - GBA: Fix rewind boundary conditions
 - GBA: Add initial I/O register settings for background matrix registers
 - Qt: Fix potential crash if a gamepad causes focus to change
Misc:
 - Qt: Show multiplayer numbers in window title

0.2.0: (2015-04-03)
Features:
 - Support for gamepad axes, e.g. analog sticks or triggers
 - Add scale presets for up to 6x
 - Settings window
 - Bilinear resampling option
 - Add option to skip BIOS start screen
 - List of recently opened games
 - Support for games using the Solar Sensor
 - Better audio resampling via blip-buf
 - Game Pak overrides dialog for setting savetype and sensor values
 - Support for games using the tilt sensor
 - Remappable shortcuts for keyboard and gamepad
 - Rewinding of emulation
 - Implemented BIOS routines SoftReset, RegisterRamReset, Diff8bitUnFilterWram, Diff8bitUnFilterVram, and Diff16bitUnFilter
 - Support IPv6
 - Save directory of last loaded file
 - Support BPS patches
 - Automatically detect and optimize out idle loops
 - Configurable game overrides