@@ -99,6 +99,7 @@ public slots:
 	void setUseBIOS(bool);
 	void loadPatch(const QString& path);
 	void importSharkport(const QString& path);
+	void exportSharkport(const QString& path);
 	void openGame();
 	void closeGame();
 	void setPaused(bool paused);
